// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterStyledLink should match the snapshot at any other index 1`] = `
<a
  className="css-1gppj2d css-1cdc8m6"
  href="www.ampcanonical.com"
>
  TestLink
</a>
`;

exports[`FooterStyledLink should match the snapshot at the first index 1`] = `
<a
  className="css-1gppj2d css-7uy4do"
  href="www.ampcanonical.com"
>
  TestLink
</a>
`;
